# enterprise-role-mining-platform

./: README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
src/role_mining_platform/: __init__.py  cli.py  data_loader.py  pipeline.py  role_analysis.py  role_suggestions.py
