[project]
name = "enterprise_role_mining_platform"
version = "0.1.0"
description = "A Python reference implementation for enterprise role mining and IAM architecture analysis."
authors = [
    { name = "Enterprise Role Mining Team" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.dependencies]
pandas = "^2.2"
networkx = "^3.3"
scikit-learn = "^1.3"
typer = "^0.11"
rich = "^14.0"

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"
